--- a/_includes/_author-bio.html
+++ b/_includes/_author-bio.html
@@ -11,6 +11,7 @@
 {% endif %}
 
   <h3 itemprop="name">{{ author.name }}</h3>
+  <h3 itemprop="name">{{ author.englishName }}</h3>
   <p>{{ author.bio }}</p>
   {% if author.email %}<a href="mailto:{{ author.email }}" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a>{% endif %}
   {% if author.twitter %}<a href="http://twitter.com/{{ author.twitter }}" class="author-social" target="_blank"><i class="fa fa-fw fa-twitter-square"></i> Twitter</a>{% endif %}
@@ -32,4 +33,5 @@
   {% if author.weibo %}<a href="http://www.weibo.com/{{ author.weibo }}" class="author-social" target="_blank"><i class="fa fa-fw fa-weibo"></i> Weibo</a>{% endif %}
   {% if author.flickr %}<a href="http://www.flickr.com/{{ author.flickr }}" class="author-social" target="_blank"><i class="fa fa-fw fa-flickr"></i> Flickr</a>{% endif %}
   {% if author.codepen %}<a href="http://codepen.io/{{ author.codepen }}" class="author-social" target="_blank"><i class="fa fa-fw fa-codepen"></i> CodePen</a>{% endif %}
+  {% if author.wechat %}<a href="Javascript: void(0)" class="author-social"><i class="fa fa-fw fa-wechat"></i> {{author.wechat}}</a>{% endif %}
 </div>
