--- a/_includes/_author-bio.html
+++ b/_includes/_author-bio.html
@@ -10,8 +10,8 @@
 	<img src="{{ site.url }}/images/{{ author.avatar }}" class="bio-photo" alt="{{ author.name }} bio photo">
 {% endif %}
 
+  <h3 itemprop="name">{{ author.chineseName }}</h3>
   <h3 itemprop="name">{{ author.name }}</h3>
-  <h3 itemprop="name">{{ author.englishName }}</h3>
   <p>{{ author.bio }}</p>
   {% if author.email %}<a href="mailto:{{ author.email }}" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a>{% endif %}
   {% if author.twitter %}<a href="http://twitter.com/{{ author.twitter }}" class="author-social" target="_blank"><i class="fa fa-fw fa-twitter-square"></i> Twitter</a>{% endif %}
